Modificacao das Consultas para usar scala, ao inves de construir Html na mao. Mudanca na Html da pagina inicial pra ficar mais bonito. Adicionados funcoes em Code para pegar a Description e o User do DB, tentativa de salvar arquivo com um Blbo do SQL.

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,50 +1,74 @@
 @(message: String)
 
 @main("Welcome to WING!") {
+<div>
+    <h1>WING is Not Github</h1>
+    <div >
+        <h2>User Registration</h2>
+        <form action="@routes.Application.addUser()" method="post" xmlns="http://www.w3.org/1999/html">
+            <div>
+                <label for="inputusername">Username:</label>
+                <input id = "inputusername" type="text" name="username" placeholder="Type username here" required/>
+            </div>
 
-<form action="@routes.Application.addUser()" method="post" xmlns="http://www.w3.org/1999/html">
-    <label for="inputusername">Username:</label>
-    <input id = "inputusername" type="text" name="username" placeholder="Type username here" />
-    <br/>
-    <label for="inputemail">Email:</label>
-    <input id="inputemail" type="email" name="email" placeholder="Type email here"/>
-    <br/>
-    <button>Add User</button>
-</form>
+            <div>
+                <label for="inputemail">Email:</label>
+                <input id="inputemail" type="email" name="email" placeholder="Type email here" required/>
+            </div>
 
-<form action="@routes.Application.addCode()" method="post">
-    <label for="inputfile">File:</label>
-    <input id="inputfile" type="file" name="file">
-    <br/>
-    <label for="inputlang">Language:</label>
-    <input id = "inputlang" type="text" name="language" placeholder="Type PL"/>
-    <br/>
-    <label for="description">Description:</label>
-    <br/>
-    <textarea id = "description" type="text" name="description" rows="6" cols="30" maxlength="2000"/>
-    </textarea>
-    <br/>
-    <label for="inputuser">Submitter:</label>
-    <input id = "inputuser" type="text" name="submitter" placeholder="Enter your username"/>
-    <br/>
-    <button>Add Code</button>
-</form>
+            <button>Add User</button>
+        </form>
+    </div>
 
-<form action="@routes.Application.addRanking()" method="post">
-    <label for="codename">Code name:</label>
-    <input id="codename" type="text" name="codename" placeholder="Type code's name">
-    <br/>
-    <label for="opinion_good">Like</label>
-    <input id="opinion_good" type="radio" value="like" name="like">
-    <label for="opinion_bad">Deslike</label>
-    <input id="opinion_bad" type="radio" value="deslike" name="like">
-    <br/>
-    <label for="comment">Comment:</label>
-    <br/>
-    <textarea id = "comment" type="text" name="comment" rows="6" cols="30" maxlength="2000"/>
-    </textarea>
-    <br/>
-    <button>Comment</button>
-</form>
+    <div>
+        <h2>Code Submission</h2>
+        <form action="@routes.Application.addCode()" method="post">
+            <label for="inputfile">File:</label>
+            <input id="inputfile" type="file" name="file" required>
+            <br/>
+            <label for="inputlang">Language:</label>
+            <input id = "inputlang" type="text" name="language" placeholder="Type PL" required/>
+            <br/>
+            <label for="description">Description:</label>
+            <br/>
+            <textarea id = "description" type="text" name="description" rows="6" cols="30" maxlength="2000" required/>
+            </textarea>
+            <br/>
+            <label for="inputuser">Submitter:</label>
+            <input id = "inputuser" type="text" name="submitter" placeholder="Enter your username" required/>
+            <br/>
+            <button>Add Code</button>
+        </form>
+    </div>
 
+    <div>
+        <h2>Comments</h2>
+        <form action="@routes.Application.addRanking()" method="post">
+            <label for="codename">Code name:</label>
+            <input id="codename" type="text" name="codename" placeholder="Type code's name" required>
+            <br/>
+            <label for="opinion_good">Like</label>
+            <input id="opinion_good" type="radio" value="like" name="like">
+            <label for="opinion_bad">Deslike</label>
+            <input id="opinion_bad" type="radio" value="deslike" name="like" checked>
+            <br/>
+            <label for="comment">Comment:</label>
+            <br/>
+            <textarea id = "comment" type="text" name="comment" rows="6" cols="30" maxlength="2000"/>
+            </textarea>
+            <br/>
+            <button>Comment</button>
+        </form>
+    </div>
+
+    <div>
+        <h2>Search</h2>
+        <button id="buttonallcodes">See All Codes!</button>
+        <script type="text/javascript">
+     document.getElementById("buttonallcodes").onclick = function(){
+        location.href = "@routes.Consultas.getAllCodes()";
+     }
+ </script>
+    </div>
+</div>
 }
