--- a/app/views/showquery.scala.html
+++ b/app/views/showquery.scala.html
@@ -1,6 +1,5 @@
-@(resultado: String)
+@(codes: List[Code])
 
-@main("WING - Resultado da busca") {
 
 <div class="row">
     <div class="col-lg-12">
@@ -11,6 +10,33 @@
     </div>
 </div>
 
-@Html(resultado)
 
-}
+ <table class = "table table-striped table-hover">
+    <thead>
+    <tr>
+        <th>Nome</th>
+        <th>Linguagem</th>
+        <th>Descrição</th>
+        <th>Nota</th>
+        <th>Submetido por</th>
+    </tr>
+    </thead>
+
+    <tbody>
+        @codes.map { source =>
+        <tr>
+            <td>@source.name</td>
+            @if(source.descriptionID != 0){
+            <td>@source.getDescription().language</td>
+            <td>@source.getDescription().description</td>
+            }
+
+            <td>@source.nota</td>
+
+            @if(source.submitterID != null){
+            <td>@source.getSubmitter().username</td>
+            }
+        </tr>
+        }
+    </tbody>
+</table>
