Refactors index.scala.html, splitting commenting, signing up and code submission to other files. Adds search by description to the Consultas class

--- a/app/views/popup.scala.html
+++ b/app/views/popup.scala.html
@@ -12,3 +12,6 @@
 <script> alert("Trying to add comment for non-existing code!") </script>
 }
 
+@if(message == "WrongPassword"){
+<script> alert("Wrong password!"); </script>
+}
