--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,79 +4,59 @@
 
 <div>
     <h1>WING is Not Github</h1>
-    <div >
-        <h2>User Registration</h2>
-        <form action="@routes.Application.addUser()" method="post" xmlns="http://www.w3.org/1999/html">
-            <div>
-                <label for="inputusername">Username:</label>
-                <input id = "inputusername" type="text" name="username" placeholder="Type username here" required/>
-            </div>
 
-            <div>
-                <label for="inputemail">Email:</label>
-                <input id="inputemail" type="email" name="email" placeholder="Type email here" required/>
-            </div>
-
-            <div>
-                <label for="inputpassword">Password:</label>
-                <input id="inputpassword" type="password" name="password" placeholder="Password" required="">
-            </div>
-
-            <button>Add User</button>
-        </form>
+    <div class="container">
+        <h2>Sign Up!</h2>
+        <button id="buttonsignup">Sign Up</button>
+        <script>
+            document.getElementById("buttonsignup").onclick = function(){
+                location.href = "signup";
+        }
+        </script>
     </div>
 
-    <div>
-        <h2>Code Submission</h2>
-        <form action="@routes.Application.addCode()" method="post">
-            <label for="inputfile">File:</label>
-            <input id="inputfile" class="form-control" type="file" name="file" required>
-            <br/>
-            <label for="inputlang">Language:</label>
-            <input id = "inputlang" class="form-control" type="text" name="language" placeholder="Type PL" required/>
-            <br/>
-            <label for="description">Description:</label>
-            <br/>
-            <textarea id = "description" class="form-control" type="text" name="description" rows="6" cols="30" maxlength="2000" required/>
-            </textarea>
-            <br/>
-            <label for="inputuser">Submitter:</label>
-            <input id = "inputuser" class="form-control" type="text" name="submitter" placeholder="Enter your username" required/>
-            <br/>
-            <button type="submit" class="btn btn-default" onclick="onadd()" >Add Code</button>
-        </form>
+    <div class="container">
+        <h2>Submit Your Code!</h2>
+        <button id="buttonsubmit">Submit</button>
+        <script>
+            document.getElementById("buttonsubmit").onclick = function(){
+                location.href = "submissions";
+        }
+        </script>
     </div>
 
-    <div>
-        <h2>Comments</h2>
-        <form action="@routes.Application.addRanking()" method="post">
-            <label for="codename">Code name:</label>
-            <input id="codename" type="text" name="codename" placeholder="Type code's name" required>
-            <br/>
-            <label for="opinion_good">Like</label>
-            <input id="opinion_good" type="radio" value="like" name="like">
-            <label for="opinion_bad">Deslike</label>
-            <input id="opinion_bad" type="radio" value="deslike" name="like" checked>
-            <br/>
-            <label for="comment">Comment:</label>
-            <br/>
-            <textarea id = "comment" type="text" name="comment" rows="6" cols="30" maxlength="2000"/>
-            </textarea>
-            <br/>
-            <button>Comment</button>
-        </form>
+    <div class="container">
+        <h2>Comment a Code</h2>
+        <button id="buttoncomment">Comment</button>
+        <script>
+            document.getElementById("buttoncomment").onclick = function(){
+                location.href = "comments";
+        }
+        </script>
     </div>
 
     <div>
         <h2>Search</h2>
+        <form action="@routes.Consultas.searchCodesByDescription()" class="form-horizontal" method="post" xmlns="http://www.w3.org/1999/html">
+            <div class="form-group">
+                <label for="buttonsearch">Search:</label>
+                <input type="text" class="form-control" placeholder="Type the description!" name="search" required>
+                <button type="submit" id="buttonsearch">Search</button>
+            </div>
+        </form>
+    </div>
+
+    <div>
         <button id="buttonallcodes">See All Codes!</button>
         <script type="text/javascript">
-        document.getElementById("buttonallcodes").onclick = function(){
-        location.href = "@routes.Consultas.getAllCodes()";
-     }
- </script>
+            document.getElementById("buttonallcodes").onclick = function(){
+            location.href = "@routes.Consultas.getAllCodes()";
+            }
+        </script>
     </div>
 </div>
+
+<script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
 
 @popup(message)
 
