--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -7,7 +7,8 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
+        <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <!--    <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script> -->
     </head>
 
     <body>
