--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -3,57 +3,26 @@
 @main("Welcome to WING!") {
 
 <div>
-    <h1>WING is Not Github</h1>
 
-    <div class="container">
-        <h2>Sign Up!</h2>
-        <button id="buttonsignup">Sign Up</button>
-        <script>
-            document.getElementById("buttonsignup").onclick = function(){
-                location.href = "signup";
-        }
-        </script>
-    </div>
-
-    <div class="container">
-        <h2>Submit Your Code!</h2>
-        <button id="buttonsubmit">Submit</button>
-        <script>
-            document.getElementById("buttonsubmit").onclick = function(){
-                location.href = "submissions";
-        }
-        </script>
-    </div>
-
-    <div class="container">
-        <h2>Comment a Code</h2>
-        <button id="buttoncomment">Comment</button>
-        <script>
-            document.getElementById("buttoncomment").onclick = function(){
-                location.href = "comments";
-        }
-        </script>
-    </div>
-
-    <div>
+    <div id="search-container">
         <h2>Search</h2>
         <form action="@routes.Consultas.searchCodesByDescription()" class="form-horizontal" method="post" xmlns="http://www.w3.org/1999/html">
-            <div class="form-group">
-                <label for="buttonsearch">Search:</label>
-                <input type="text" class="form-control" placeholder="Type the description!" name="search" required>
-                <button type="submit" id="buttonsearch">Search</button>
+            <div class="form-group" id="search-form">
+                <input type="text" class="form-control" id="searchinput" placeholder="Type the description!" name="search" required>
+                <input type="button" class="btn btn-default" id="searchbutton" value="Search">
             </div>
         </form>
-    </div>
-
-    <div>
-        <button id="buttonallcodes">See All Codes!</button>
-        <script type="text/javascript">
+        <div>
+            <button class="btn btn-default btn-lg" id="buttonallcodes">See All Codes!</button>
+            <script type="text/javascript">
             document.getElementById("buttonallcodes").onclick = function(){
             location.href = "@routes.Consultas.getAllCodes()";
             }
         </script>
+        </div>
     </div>
+
+
 </div>
 
 <script src="@routes.Assets.at("javascripts/hello.js")" type="text/javascript"></script>
