--- a/app/views/submission.scala.html
+++ b/app/views/submission.scala.html
@@ -1,9 +1,10 @@
 @main("Submit Your Code!"){
-    <div>
+    <div class="overlay" style="display:none"></div>
+    <div id="sub-container">
         <h2>Code Submission</h2>
         <form action="@routes.Application.addCode()" method="post">
             <label for="inputfile">File:</label>
-            <input id="inputfile" class="form-control" type="file" name="file" required>
+            <input id="inputfile" type="file" name="file" required>
             <br/>
             <label for="inputlang">Language:</label>
             <input id = "inputlang" class="form-control" type="text" name="language" placeholder="Type PL" required/>
@@ -15,17 +16,19 @@
             <br/>
             <button class="btn btn-default" id="OnAdd" >Add Code</button>
 
-            <div style="display: none" id="confirm">
-                <div class="form-group">
-                    <label for="inputusername">Username:</label>
-                    <input id = "inputusername" class="form-control" type="text" name="submitter" placeholder="Type username here" required/>
-                </div>
+            <div style="display:none" id="confirm">
+                <div class="wrapper" id="confirmation-wrapper">
+                    <div class="form-group">
+                        <label for="inputusername">Username:</label>
+                        <input id = "inputusername" class="form-control" type="text" name="submitter" placeholder="Type username here" required/>
+                    </div>
 
-                <div class="form-group">
-                    <label for="inputpassword">Password:</label>
-                    <input id="inputpassword" class="form-control" type="password" name="password" placeholder="Password" required="">
+                    <div class="form-group">
+                        <label for="inputpassword">Password:</label>
+                        <input id="inputpassword" class="form-control" type="password" name="password" placeholder="Password" required="">
+                    </div>
+                    <button type="submit" class="btn btn-default">Confirm</button>
                 </div>
-                <button type="submit" class="btn btn-default">Confirm</button>
             </div>
         </form>
     </div>
@@ -33,6 +36,11 @@
 
 <script>
     $( "#OnAdd" ).click(function(){
+        $( ".overlay" ).show( "slow" );
         $( "#confirm" ).show( "slow" );
+    });
+    $( ".overlay").click(function(){
+        $( ".overlay" ).hide();
+        $( "#confirm" ).hide();
     });
 </script>
