--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,83 @@
+html, body {
+    background-image:url(light_wool.png);
+    margin: 0;
+    min-height: 100%;
+}
+
+body {
+    position: relative;
+    min-height: 1000px;
+    padding: 50px;
+}
+
+/*
+#confirm {
+    position:relative;
+    display: inline-block;
+    vertical-align:middle;
+    text-align:left;
+    box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 0.5);
+    border-radius: 10px;
+}
+*/
+
 .forms{
     display:inline;
+}
+
+.overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    background-color: rgba(0,0,0,0.5);
+}
+
+/* just some content with arbitrary styles for explanation purposes */
+#confirm {
+    min-width: 25%;
+    min-height: 25%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin-top: -12.5%;
+    margin-left: -12.5%;
+    background-color: #f1c40f;
+    border-radius: 5px;
+    text-align: center;
+    z-index: 11; /* 1px higher than the overlay layer */
+}
+
+
+#confirmation-wrapper {
+    position: relative;
+    padding:10px;
+}
+
+#sub-container  {
+    max-width: 40%;
+    margin: auto;
+}
+
+#search-container  {
+    max-width: 40%;
+    margin: auto;
+}
+
+#search-form {
+    position:relative;
+}
+
+#searchinput {
+    position: inherit;
+    display: inline;
+    max-width:80%
+}
+
+#searchbutton {
+    position: inherit;
+    display: inline;
+    width: 15%;
 }
