--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -4,8 +4,8 @@
 
 <div>
 
-    <div id="search-container">
-        <h2>Search</h2>
+    <div class="search-container" id="search-container">
+        <p id="logo">Search on WinG</p>
         <form action="@routes.Consultas.searchCodesByDescription()" class="form-horizontal" method="post" xmlns="http://www.w3.org/1999/html">
             <div class="form-group" id="search-form">
                 <input type="text" class="form-control" id="searchinput" placeholder="Type the description!" name="search" required>
