--- a/app/views/submission.scala.html
+++ b/app/views/submission.scala.html
@@ -1,19 +1,24 @@
 @main("Submit Your Code!"){
     <div class="overlay" style="display:none"></div>
-    <div id="sub-container">
-        <h2>Code Submission</h2>
+    <div class="components-container" id="sub-container">
+        <h1>Code Submission</h1>
         <form action="@routes.Application.addCode()" method="post">
-            <label for="inputfile">File:</label>
-            <input id="inputfile" type="file" name="file" required>
-            <br/>
-            <label for="inputlang">Language:</label>
-            <input id = "inputlang" class="form-control" type="text" name="language" placeholder="Type PL" required/>
-            <br/>
-            <label for="description">Description:</label>
-            <br/>
-            <textarea id = "description" class="form-control" type="text" name="description" rows="6" cols="30" maxlength="2000" required/>
-            </textarea>
-            <br/>
+            <div class="form-group">
+                <label for="inputfile">File:</label>
+                <input id="inputfile" type="file" name="file" required>
+            </div>
+
+            <div class="form-group">
+                <label for="inputlang">Language:</label>
+                <input id = "inputlang" class="form-control" type="text" name="language" placeholder="Type PL" required/>
+            </div>
+
+            <div class="form-group">
+                <label for="description">Description:</label>
+                <textarea id = "description" class="form-control" type="text" name="description" rows="6" cols="30" maxlength="2000" placeholder="Insert your description here!" required>
+                </textarea>
+            </div>
+
             <button class="btn btn-default" id="OnAdd" >Add Code</button>
 
             <div style="display:none" id="confirm">
@@ -27,7 +32,10 @@
                         <label for="inputpassword">Password:</label>
                         <input id="inputpassword" class="form-control" type="password" name="password" placeholder="Password" required="">
                     </div>
-                    <button type="submit" class="btn btn-default">Confirm</button>
+
+                    <div class="form-group">
+                        <button type="submit" class="btn btn-default">Confirm</button>
+                    </div>
                 </div>
             </div>
         </form>
