--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,7 +1,11 @@
 html, body {
-    background-image:url(light_wool.png);
+    background: -webkit-linear-gradient(to bottom, #DD995F, #FFBB81 20%);
+    background: -o-linear-gradient(to bottom, #DD995F, #FFBB81 20%);
+    background: -moz-linear-gradient(to bottom, #DD995F, #FFBB81 20%);
+    background: linear-gradient(to bottom, #DD995F, #FFBB81 20%);
     margin: 0;
     min-height: 100%;
+    /*#FFBB81*/
 }
 
 body {
@@ -20,6 +24,11 @@ body {
     border-radius: 10px;
 }
 */
+
+#logo {
+    font-size: 250%;
+    font-family: eddieRounded;
+}
 
 .forms{
     display:inline;
@@ -44,7 +53,8 @@ body {
     left: 50%;
     margin-top: -12.5%;
     margin-left: -12.5%;
-    background-color: #f1c40f;
+    background-color: #6FADFC;
+    color:#FFFFFF;
     border-radius: 5px;
     text-align: center;
     z-index: 11; /* 1px higher than the overlay layer */
@@ -56,14 +66,25 @@ body {
     padding:10px;
 }
 
-#sub-container  {
+.components-container  {
+    padding: 5% 2% 100%;
     max-width: 40%;
     margin: auto;
+    background-image:url(light_wool.png);
+    box-shadow: 0px 5px 10px 0px;
+    border-radius: 40px;
+
 }
 
-#search-container  {
+.search-container  {
+    text-align: center;
+    padding: 12.5% 2% 100%;
     max-width: 40%;
     margin: auto;
+    margin-top: 5%;
+    background-image:url(light_wool.png);
+    border-radius: 40px;
+    box-shadow: 0px 5px 10px 0px;
 }
 
 #search-form {
@@ -79,5 +100,18 @@ body {
 #searchbutton {
     position: inherit;
     display: inline;
+    margin-bottom:5px;
     width: 15%;
+    background-color: #438BE7;
+    color: #FFFFFF;
+}
+
+#opinion_good, #opinion_bad {
+    display:inline;
+    width: 10%;
+}
+
+@font-face {
+    font-family: eddieRounded;
+    src: url(EddieRounded.ttf);
 }
