--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -1,15 +1,22 @@
 #brand {
-    background-color: #E1E1E1;
+    background: #A6BCD7;
+    /*background-color: #3E87E5;*/
     color:#222;
 }
 
+/*
 .navbar-brand {
     border-radius:120px;
 }
+*/
 
 .navbar {
-    border-radius:120px;
-    height:20px;
-    width:85%;
-    margin-left: 7.5%;
+/*    border-radius:120px; */
+    border-color: #C6DEFD;
+    background: #C6DEFD;
+    /*background-color: #6FADFC;*/
+/*    width:85%;
+    margin-left: 7.5%; */
+    box-shadow: 0px 5px 10px 0px /*rgba(0, 0, 0, 0.5)*/;
+    opacity: 0.85;
 }
