File upload implementation complete. html form altered to accept multidata. Begining to implement file download and to refactor Controllers.Application

--- a/app/views/submission.scala.html
+++ b/app/views/submission.scala.html
@@ -6,6 +6,9 @@
             <label for="inputfile">File:</label>
             <input id="inputfile" type="file" class="upload" name="file" required>
             <br/>
+            <label for="filename">Name:</label>
+            <input id = "filename" class="form-control" type="text" name="filename" placeholder="Type the code's name" required/>
+            <br/>
             <label for="inputlang">Language:</label>
             <input id = "inputlang" class="form-control" type="text" name="language" placeholder="Type PL" required/>
             <br/>
