Align button with text box in code submission page to prevent possible merge errors

--- a/app/views/submission.scala.html
+++ b/app/views/submission.scala.html
@@ -18,8 +18,11 @@
                 <textarea id = "description" class="form-control" type="text" name="description" rows="6" cols="30" maxlength="2000" placeholder="Insert your description here!" required>
                 </textarea>
             </div>
-            <button class="btn btn-default" id="OnAdd" >Add Code</button>
 
+            <div class="form-group">
+                <button class="btn btn-default" id="OnAdd" >Add Code</button>
+            </div>
+            
             <div style="display:none" id="confirm">
                 <div class="wrapper" id="confirmation-wrapper">
                     <div class="form-group">
