Finished method for file download. Method remains untested. Refactored the Applications class, moving methods to different classes. Created classes for user registration, comment submission, code submission e redirecting

--- a/app/views/comments.scala.html
+++ b/app/views/comments.scala.html
@@ -1,7 +1,7 @@
 @main("Comment a Code!"){
     <div class="components-container">
         <h1>Comment a Code</h1>
-        <form action="@routes.Application.addRanking()" method="post">
+        <form action="@routes.CommentAdder.addRanking()" method="post">
             <div class="form-group">
                 <label for="codename">Code's name:</label>
                 <input id="codename" class="form-control" type="text" name="codename" placeholder="Type code's name" required>
