--- a/app/views/popup.scala.html
+++ b/app/views/popup.scala.html
@@ -15,3 +15,11 @@
 @if(message == "WrongPassword"){
 <script> alert("Wrong password!"); </script>
 }
+
+@if(message == "InvalidFileError"){
+<script> alert("Unable to get file!"); </script>
+}
+
+@if(message == "DownloadError"){
+<script> alert("Unable download file!"); </script>
+}
