--- a/app/views/signup.scala.html
+++ b/app/views/signup.scala.html
@@ -1,7 +1,7 @@
 @main("Sign up!"){
     <div class="components-container">
         <h1>User Registration</h1>
-        <form action="@routes.Application.addUser()" role="form" method="post" xmlns="http://www.w3.org/1999/html">
+        <form action="@routes.UserAdder.addUser()" role="form" method="post" xmlns="http://www.w3.org/1999/html">
             <div class="form-group">
                 <label for="inputusername">Username:</label>
                 <input id="inputusername" class="form-control" type="text" name="username" placeholder="Type username here" required/>
