--- a/app/views/comments.scala.html
+++ b/app/views/comments.scala.html
@@ -9,13 +9,13 @@
 
             <div class="radio">
                 <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1">
+                    <input type="radio" name="like" id="optionsRadios1" value="like">
                     Like
                 </label>
             </div>
             <div class="radio">
                 <label>
-                    <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2" checked>
+                    <input type="radio" name="like" id="optionsRadios2" value="deslike" checked>
                     Dislike
                 </label>
             </div>
