--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -13,7 +13,7 @@
                 </a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav navbar-left">
+                <ul class="nav navbar-nav navbar-right">
                     <li><a href="signup">Sign Up</a></li>
                     <li><a href="submissions">Submit a Code</a></li>
                     <li><a href="comments">Comment a Code</a></li>
