--- a/app/views/showquery.scala.html
+++ b/app/views/showquery.scala.html
@@ -1,42 +1,52 @@
 @(codes: List[Code])
 
 
-<div class="row">
-    <div class="col-lg-12">
-        <div class="page-header">
-            <h1 id="forms">Códigos</h1>
-            <h3>Resultado da busca</h3>
+
+@main("Results"){
+    @navbar()
+
+    <div class="components-container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="page-header">
+                    <h1>Search Results</h1>
+                </div>
+            </div>
         </div>
+
+
+         <table class = "table table-striped table-hover">
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>Language</th>
+                <th>Description</th>
+                <th>Rating</th>
+                <th>Submitter</th>
+                <th>Link</th>
+            </tr>
+            </thead>
+
+            <tbody>
+                @codes.map { source =>
+                <tr>
+                    <td>@source.name</td>
+                    @if(source.getDescription() != 0){
+                    <td>@source.getDescription().language</td>
+                    <td>@source.getDescription().description</td>
+                    }
+
+                    <td>@source.nota</td>
+
+                    @if(source.getSubmitter() != null){
+                    <td>@source.getSubmitter().username</td>
+                    }
+                    <td><a href="@routes.FileHandlers.downloadFile(source.name)">Download</a></td>
+
+                    <td><a href="@routes.Consultas.getAllComments(source.name)">Comments</a></td>
+                </tr>
+                }
+            </tbody>
+        </table>
     </div>
-</div>
-
-
- <table class = "table table-striped table-hover">
-    <thead>
-    <tr>
-        <th>Nome</th>
-        <th>Linguagem</th>
-        <th>Descrição</th>
-        <th>Nota</th>
-        <th>Submetido por</th>
-    </tr>
-    </thead>
-
-    <tbody>
-        @codes.map { source =>
-        <tr>
-            <td>@source.name</td>
-            @if(source.descriptionID != 0){
-            <td>@source.getDescription().language</td>
-            <td>@source.getDescription().description</td>
-            }
-
-            <td>@source.nota</td>
-
-            @if(source.getSubmitter() != null){
-            <td>@source.getSubmitter().username</td>
-            }
-        </tr>
-        }
-    </tbody>
-</table>
+}
