--- a/app/views/signup.scala.html
+++ b/app/views/signup.scala.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="form-group">
-                <button class="btn btn-default">Add User</button>
+                <button class="btn btn-default">Sign Up</button>
             </div>
         </form>
     </div>
