--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,8 +1,10 @@
 html, body {
+/*
     background: -webkit-linear-gradient(to bottom, #DD995F, #FFBB81 20%);
     background: -o-linear-gradient(to bottom, #DD995F, #FFBB81 20%);
     background: -moz-linear-gradient(to bottom, #DD995F, #FFBB81 20%);
-    background: linear-gradient(to bottom, #DD995F, #FFBB81 20%);
+    background: linear-gradient(to bottom, #DD995F, #FFBB81 20%); */
+    background: #e1f5fe;
     margin: 0;
     min-height: 100%;
     /*#FFBB81*/
@@ -12,6 +14,7 @@ body {
     position: relative;
     min-height: 1000px;
     padding: 50px;
+    color: #424242;
 }
 
 /*
@@ -102,7 +105,7 @@ body {
     display: inline;
     margin-bottom:5px;
     width: 15%;
-    background-color: #438BE7;
+    background-color: #0288d1;
     color: #FFFFFF;
 }
 
@@ -114,4 +117,13 @@ body {
 @font-face {
     font-family: eddieRounded;
     src: url(EddieRounded.ttf);
+}
+
+.btn {
+    color: #EEEEEE;
+    background: #00c853;
+}
+.btn:hover {
+    color: #424242;
+    background: #00c853;
 }
