--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -73,6 +73,7 @@ body {
     padding: 5% 2% 100%;
     max-width: 40%;
     margin: auto;
+    margin-top: 5%;
     background-image:url(light_wool.png);
     box-shadow: 0px 5px 10px 0px;
     border-radius: 40px;
