--- a/app/views/showquery.scala.html
+++ b/app/views/showquery.scala.html
@@ -3,9 +3,7 @@
 
 
 @main("Results"){
-    @navbar()
-
-    <div class="components-container">
+    <div class="results-container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="page-header">
@@ -14,8 +12,7 @@
             </div>
         </div>
 
-
-         <table class = "table table-striped table-hover">
+        <table class="table table-striped table-hover">
             <thead>
             <tr>
                 <th>Name</th>
@@ -33,7 +30,7 @@
                     <td>@source.name</td>
                     @if(source.getDescription() != 0){
                     <td>@source.getDescription().language</td>
-                    <td>@source.getDescription().description</td>
+                    <td class="table-description">@source.getDescription().description</td>
                     }
 
                     <td>@source.nota</td>
