--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -91,6 +91,17 @@ body {
     box-shadow: 0px 5px 10px 0px;
 }
 
+.results-container  {
+    text-align: center;
+    padding: 12.5% 2% 100%;
+    max-width: 100%;
+    margin: auto;
+    margin-top: 5%;
+    background-image:url(light_wool.png);
+    border-radius: 40px;
+    box-shadow: 0px 5px 10px 0px;
+}
+
 #search-form {
     position:relative;
 }
